landing page[wip]

--- a/landing_page.html
+++ b/landing_page.html
@@ -20,9 +20,61 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="column-2"><span>left</span></div>
-      <div class="column-2"><span>right</span></div>
+    <div class="section-2">
+      <div class="row">
+        <div class="column-2 left-section">
+          <div class="vertical-stars">
+            <img src="assets/Vertical_stars.png" alt="stars" />
+          </div>
+          <span class="heading-text">
+            Empower Your Business with the Right Talent!
+          </span>
+          <div class="find-talent"></div>
+          <span class="sub-text"
+            >HeiPetter is a platform for Lorem ipsum dolor sit amet consectetur.
+            Diam maecenas leo iaculis porttitor pharetra dignissim nec
+            risus.</span
+          >
+          <div class="horizontal-stars">
+            <img src="assets/Horizontal_stars.png" alt="stars" />
+          </div>
+        </div>
+        <div class="column-2 right-section">
+          <span class="text"
+            >HeiPetter is a platform for Lorem ipsum dolor sit amet consectetur.
+            Diam maecenas leo iaculis porttitor pharetra dignissim nec
+            risus.</span
+          >
+          <img class="circle-logo" src="assets/circle-logo.png" alt="stars" />
+        </div>
+      </div>
+    </div>
+    <div class="section-3">
+      <div class="row">
+        <div class="column-1 get-started-section">
+          <img class="arrow" src="assets/horizontal-arrow.png" alt="stars" />
+          <button class="get-started-button">Get Started</button>
+        </div>
+      </div>
+    </div>
+    <div class="section-4">
+      <div class="row">
+        <div class="column-2 left-section">
+          <div class="heading-div">
+            <img class="bend-arrow" src="assets/bend-arrow.png" alt="arrow" />
+            <span class="heading"> Perfect to find fresh talent </span>
+          </div>
+          <p class="text">
+            HeiPetter is a platform for Lorem ipsum dolor sit amet consectetur.
+            Diam maecenas leo iaculis porttitor pharetra dignissim nec risus.
+            Eget libero in purus non consequat blandit odio massa auctor.
+          </p>
+          <div class="blue-stars">
+            <img src="assets/blue-stars.png" alt="stars" />
+          </div>
+        </div>
+        <div class="column-2 right-section"></div>
+      </div>
     </div>
   </body>
 </html>
