--- a/landing_page.html
+++ b/landing_page.html
@@ -9,6 +9,29 @@
     <title>landing page</title>
   </head>
   <body>
+    <div class="header">
+      <div class="row">
+        <div class="column-2 left-nav">
+          <img src="assets/green_hand_icon.png" alt="hand-icon" />
+          <a class="link" href="#">Home</a>
+          <a class="link" href="#">For Business</a>
+          <a class="link" href="#">About us</a>
+          <a class="link" href="#">FAQs</a>
+        </div>
+        <div class="column-2 right-nav">
+          <button class="register-button">Register</button>
+          <button class="login-button">
+            Log In
+            <img
+              src="assets/arrow-down-drop.png"
+              alt="arrow-down"
+              height="20px"
+            />
+          </button>
+          <img src="assets/language-icon.png" alt="lang-icon" />
+        </div>
+      </div>
+    </div>
     <div class="heading-section">
       <div class="row">
         <div class="column-1 inner-section">
