--- a/landing_page.html
+++ b/landing_page.html
@@ -99,5 +99,32 @@
         <div class="column-2 right-section"></div>
       </div>
     </div>
+    <div class="footer">
+      <div class="row">
+        <div class="column-2 left-footer">
+          <div class="contact-us-section">
+            <div class="logo-section">
+              <img
+                src="assets/hand_icon.png"
+                alt="hand_icon"
+                class="responsive-image"
+              />
+              <span class="title">HeiPetter</span>
+            </div>
+            <img src="assets/footer-circle-logo.png" alt="footer-logo" />
+          </div>
+          <div>
+            <div class="vertical-menu">
+              <span class="heading">Menu</span>
+              <a href="#">Dashboard</a>
+              <a href="#">Job Ads</a>
+              <a href="#">Find Talent</a>
+              <a href="#">Messages</a>
+            </div>
+          </div>
+        </div>
+        <div class="column-2 right-footer"></div>
+      </div>
+    </div>
   </body>
 </html>
