--- a/landing_page.html
+++ b/landing_page.html
@@ -113,17 +113,85 @@
             </div>
             <img src="assets/footer-circle-logo.png" alt="footer-logo" />
           </div>
-          <div>
-            <div class="vertical-menu">
-              <span class="heading">Menu</span>
-              <a href="#">Dashboard</a>
-              <a href="#">Job Ads</a>
-              <a href="#">Find Talent</a>
-              <a href="#">Messages</a>
+
+          <div class="vertical-menu">
+            <span class="heading">Menu</span>
+            <a class="link" href="#">Home</a>
+            <a class="link" href="#">For Business</a>
+            <a class="link" href="#">About Us</a>
+            <a class="link" href="#">Contact Us</a>
+            <a class="link" href="#">FAQs</a>
+          </div>
+          <p class="footer-text">
+            At HeiPetter our mission is simple: to connect talented individuals
+            with fulfilling career opportunities that align with their passions
+            and strengths. Whether you're a seasoned professional looking for a
+            fresh start or someone re-entering the workforce after a hiatus, we
+            are here to support you every step of the way.
+          </p>
+          <div class="footer-line"></div>
+          <p class="copyright-text">Copyright HeiPetter 2024</p>
+        </div>
+        <div class="column-2 right-footer">
+          <span style="opacity: 31%" class="footer-content-title">
+            Hei! How can</span
+          >
+          <span class="footer-content-subtitle"> we help you?</span>
+          <div class="footer-content-contact-icons">
+            <img class="icon" src="assets/footer-chat.png" alt="footer-logo" />
+            <div>
+              <span class="contact-text-heading">Chat with us</span>
+              <span class="contact-text-sub-heading"
+                >Our friendly team is here to help you</span
+              >
+              <p class="contact-text">heipetter@gmail.com</p>
             </div>
           </div>
+          <div class="footer-content-contact-icons">
+            <img class="icon" src="assets/footer-visit.png" alt="footer-logo" />
+            <div>
+              <span class="contact-text-heading">Visit us</span>
+              <span class="contact-text-sub-heading"
+                >Come say hello at our office HQ</span
+              >
+
+              <p class="contact-text">
+                100th Avenue, Berklee 5860 Kristiansand Norway
+              </p>
+            </div>
+          </div>
+          <div class="footer-content-contact-icons">
+            <img class="icon" src="assets/footer-call.png" alt="footer-logo" />
+            <div>
+              <span class="contact-text-heading">Call us</span>
+              <span class="contact-text-sub-heading"
+                >Mon-Fri from 8am to 5pm</span
+              >
+
+              <p class="contact-text">+1 940 049 9094</p>
+            </div>
+          </div>
+          <div class="social-icons">
+            <img
+              class="icon"
+              src="assets/footer-twitter.png"
+              alt="footer-logo"
+            />
+            <img
+              class="icon"
+              src="assets/footer-facebook.png"
+              alt="footer-logo"
+            />
+            <img
+              class="icon"
+              src="assets/footer-linkedin.png"
+              alt="footer-logo"
+            />
+            <img class="icon" src="assets/footer-web.png" alt="footer-logo" />
+            <div class="footer-line"></div>
+            <span class="text">By HeiPetter </span>
+          </div>
         </div>
-        <div class="column-2 right-footer"></div>
       </div>
     </div>
   </body>
