footer icon changes

--- a/landing_page.html
+++ b/landing_page.html
@@ -138,7 +138,7 @@
           >
           <span class="footer-content-subtitle"> we help you?</span>
           <div class="footer-content-contact-icons">
-            <img class="icon" src="assets/footer-chat.png" alt="footer-logo" />
+            <img class="icon" src="assets/Chat.svg" alt="footer-logo" />
             <div>
               <span class="contact-text-heading">Chat with us</span>
               <span class="contact-text-sub-heading"
@@ -148,7 +148,7 @@
             </div>
           </div>
           <div class="footer-content-contact-icons">
-            <img class="icon" src="assets/footer-visit.png" alt="footer-logo" />
+            <img class="icon" src="assets/Location.svg" alt="footer-logo" />
             <div>
               <span class="contact-text-heading">Visit us</span>
               <span class="contact-text-sub-heading"
@@ -161,7 +161,7 @@
             </div>
           </div>
           <div class="footer-content-contact-icons">
-            <img class="icon" src="assets/footer-call.png" alt="footer-logo" />
+            <img class="icon" src="assets/Call.svg" alt="footer-logo" />
             <div>
               <span class="contact-text-heading">Call us</span>
               <span class="contact-text-sub-heading"
